# rust-newsletter-service

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
migrations/: 20210831123856_create_subscriptions_table.down.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
