[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.11" # todo migrate to 0.13 (breaking changes)
serde = { version = "1", features = ["derive"]}
serde-aux = "4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
secrecy = { version = "0.8", features = ["serde"] }
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
unicode-segmentation = "1"
validator = "0.16"

[dependencies.sqlx]
version = "^0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
once_cell = "1.8"
claim = "0.5.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[profile.dev.package."*"]
opt-level = 3